added chart api, and chart visuals

--- a/views/swings.jade
+++ b/views/swings.jade
@@ -28,3 +28,6 @@ block content
           td #{swing['Carry']}
           td #{swing['Total Distance']}
           td #{swing['Offline']}
+
+  #chart(style="width: 400px;")
+  script(type="text/javascript", src="/javascripts/plotter.js");
