--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
     link(rel='stylesheet', href='/stylesheets/jquery.jqplot.css')
     script(type='text/javascript', src='/javascripts/jquery.js')
     script(type='text/javascript', src='/javascripts/jqplot/jquery.jqplot.js')
+    script(type='text/javascript', src='/javascripts/dropzone.js')
   body
     block content
