--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,8 @@ html
     script(type='text/javascript', src='/javascripts/jquery.js')
     script(type='text/javascript', src='/javascripts/jqplot/jquery.jqplot.js')
     script(type='text/javascript', src='/javascripts/dropzone.js')
+    script(type='text/javascript', src='/javascripts/app/vendor/require-2.1.1.js')
+    script(type='text/javascript', src='/javascripts/app/config.js')
+
   body
     block content
