trying to get a front end chaplin app coing

--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -7,10 +7,10 @@ html
     link(rel='stylesheet', href='/stylesheets/jquery.jqplot.css')
     script(type='text/javascript', src='/javascripts/jquery.js')
     script(type='text/javascript', src='/javascripts/jqplot/jquery.jqplot.js')
-    script(type='text/javascript', src='/javascripts/dropzone.js')
     script(type='text/javascript', src='/bootstrap/js/bootstrap.js')
-    script(type='text/javascript', src='/javascripts/app/vendor/require-2.1.1.js')
-    script(type='text/javascript', src='/javascripts/app/config.js')
+    script(type='text/javascript', src='/javascripts/frontend/vendor/require-2.1.1.js')
+    script(type='text/javascript', src='/javascripts/frontend/config.js')
+
 
   body
     div.navbar.navbar-inverse.navbar-fixed-top
@@ -48,7 +48,3 @@ html
                     a(href="#") 3 Wood
                   li
                     a(href="#") Driver
-    div.container-fluid
-      div.row-fluid
-        div.span3.sidebar
-        div.span9.site-container
