--- a/public/javascripts/frontend/templates/swings-item.hbs
+++ b/public/javascripts/frontend/templates/swings-item.hbs
@@ -1,13 +1,10 @@
-<tr>
-  <td>{{Club}}</td>
-  <td>{{this['Club Head Speed']}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-  <td>{{Club}}</td>
-</tr>
+<td>{{club}}</td>
+<td>{{club_head_speed}}</td>
+<td>{{launch_angle}}</td>
+<td>{{azimuth}}</td>
+<td>{{side_spin}}</td>
+<td>{{back_spin}}</td>
+<td>{{total_spin}}</td>
+<td>{{carry}}</td>
+<td>{{total_distance}}</td>
+<td>{{offline}}</td>
