--- a/public/javascripts/frontend/templates/swings.hbs
+++ b/public/javascripts/frontend/templates/swings.hbs
@@ -1,5 +1,5 @@
-<h1>swings fuck</h1>
-<table>
+<h1>Swings</h1>
+<table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
       <th>Club</th>
