making menu items actionable

--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -25,26 +25,26 @@ html
                   b.caret
                 ul.dropdown-menu
                   li
-                    a(href="#") Sand Wedge
+                    a(href="#!/swings/sand") Sand Wedge
                   li
-                    a(href="#") Pitching Wedge
+                    a(href="#!/swings/pw") Pitching Wedge
                   li
-                    a(href="#") 9 Iron
+                    a(href="#!/swings/9-Iron") 9 Iron
                   li
-                    a(href="#") 8 Iron
+                    a(href="#!/swings/8-Iron") 8 Iron
                   li
-                    a(href="#") 7 Iron
+                    a(href="#!/swings/7-Iron") 7 Iron
                   li
-                    a(href="#") 6 Iron
+                    a(href="#!/swings/6-Iron") 6 Iron
                   li
-                    a(href="#") 5 Iron
+                    a(href="#!/swings/5-Iron") 5 Iron
                   li
-                    a(href="#") Hybrid 4
+                    a(href="#!/swings/Hybrid-4") Hybrid 4
                   li
-                    a(href="#") Hybrid 3
+                    a(href="#!/swings/Hybrid-3") Hybrid 3
                   li
-                    a(href="#") 5 Wood
+                    a(href="#!/swings/5-Wood") 5 Wood
                   li
-                    a(href="#") 3 Wood
+                    a(href="#!/swings/3-Wood") 3 Wood
                   li
-                    a(href="#") Driver
+                    a(href="#!/swings/Driver") Driver
