updating some styles and view stuff

--- a/assets/js/frontend/templates/swings-item.hbs
+++ b/assets/js/frontend/templates/swings-item.hbs
@@ -1,6 +1,7 @@
 <td>{{club}}</td>
 <td>{{club_head_speed}}</td>
 <td>{{launch_angle}}</td>
+<td>{{descent_angle}}</td>
 <td>{{azimuth}}</td>
 <td>{{side_spin}}</td>
 <td>{{back_spin}}</td>
