--- a/public/javascripts/frontend/templates/swings.hbs
+++ b/public/javascripts/frontend/templates/swings.hbs
@@ -5,6 +5,7 @@
       <th>Club</th>
       <th>Club Head Speed</th>
       <th>Launch Angle</th>
+      <th>Descent Angle</th>
       <th>Azimuth</th>
       <th>Side Spin</th>
       <th>Back Spin</th>
