adding stat view and graphs

--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -4,9 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/jquery.jqplot.css')
+    link(rel='stylesheet', href='http://cdn.oesmith.co.uk/morris-0.4.3.min.css')
     script(type='text/javascript', src='/javascripts/jquery.js')
-    script(type='text/javascript', src='/javascripts/jqplot/jquery.jqplot.js')
+    script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js')
+    script(type='text/javascript', src='http://cdn.oesmith.co.uk/morris-0.4.3.js')
     script(type='text/javascript', src='/bootstrap/js/bootstrap.js')
     script(type='text/javascript', src='/javascripts/frontend/vendor/require-2.1.1.js')
     script(type='text/javascript', src='/javascripts/frontend/config.js')
