adding better time series support for front end graph

--- a/assets/js/frontend/templates/stat.hbs
+++ b/assets/js/frontend/templates/stat.hbs
@@ -1,4 +1,5 @@
 <h1>Stats</h1>
 <div class="row-fluid">
-  <div id='accuracy-chart'></div>
+  <div id='miss-chart' style="width: 200px; height: 200px; float: left;"></div>
+  <div id='accuracy-chart' style="width: 500px; height: 200px; float: left;"></div>
 </div>
