making stats the default menu choice

--- a/api/views/layout.jade
+++ b/api/views/layout.jade
@@ -26,26 +26,26 @@ html
                   b.caret
                 ul.dropdown-menu
                   li
-                    a(href="#!/swings/sand") Sand Wedge
+                    a(href="#!/stats/sand") Sand Wedge
                   li
-                    a(href="#!/swings/pw") Pitching Wedge
+                    a(href="#!/stats/pw") Pitching Wedge
                   li
-                    a(href="#!/swings/9-Iron") 9 Iron
+                    a(href="#!/stats/9-Iron") 9 Iron
                   li
-                    a(href="#!/swings/8-Iron") 8 Iron
+                    a(href="#!/stats/8-Iron") 8 Iron
                   li
-                    a(href="#!/swings/7-Iron") 7 Iron
+                    a(href="#!/stats/7-Iron") 7 Iron
                   li
-                    a(href="#!/swings/6-Iron") 6 Iron
+                    a(href="#!/stats/6-Iron") 6 Iron
                   li
-                    a(href="#!/swings/5-Iron") 5 Iron
+                    a(href="#!/stats/5-Iron") 5 Iron
                   li
-                    a(href="#!/swings/Hybrid-4") Hybrid 4
+                    a(href="#!/stats/Hybrid-4") Hybrid 4
                   li
-                    a(href="#!/swings/Hybrid-3") Hybrid 3
+                    a(href="#!/stats/Hybrid-3") Hybrid 3
                   li
-                    a(href="#!/swings/5-Wood") 5 Wood
+                    a(href="#!/stats/5-Wood") 5 Wood
                   li
-                    a(href="#!/swings/3-Wood") 3 Wood
+                    a(href="#!/stats/3-Wood") 3 Wood
                   li
-                    a(href="#!/swings/Driver") Driver
+                    a(href="#!/stats/Driver") Driver
