adding straight chart

--- a/assets/js/frontend/templates/stat.hbs
+++ b/assets/js/frontend/templates/stat.hbs
@@ -2,4 +2,5 @@
 <div class="row-fluid">
   <div id='miss-chart' style="width: 200px; height: 200px; float: left;"></div>
   <div id='accuracy-chart' style="width: 500px; height: 200px; float: left;"></div>
+  <div id='straight-chart' style="width: 500px; height: 200px; float: left;"></div>
 </div>
