--- a/public/javascripts/frontend/templates/swings.hbs
+++ b/public/javascripts/frontend/templates/swings.hbs
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th>Club</th>
+      <th>Model</th>
       <th>Club Head Speed</th>
       <th>Launch Angle</th>
       <th>Descent Angle</th>
