--- a/assets/js/frontend/templates/stat.hbs
+++ b/assets/js/frontend/templates/stat.hbs
@@ -1,6 +1,38 @@
 <h1>Stats</h1>
 <div class="row-fluid">
-  <div id='miss-chart' style="width: 200px; height: 200px; float: left;"></div>
-  <div id='accuracy-chart' style="width: 500px; height: 200px; float: left;"></div>
-  <div id='straight-chart' style="width: 500px; height: 200px; float: left;"></div>
+  <div class="span2">
+    <div id='miss-chart' style="width: 200px; height: 200px;"></div>
+  </div>
+  <div class="span10">
+    <div class="row-fluid">
+      <div class="span5">
+        <h3 class="chart-title">Average Accuracy</h3>
+        <div id='accuracy-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+      <div class="span5">
+        <h3 class="chart-title">Straight Percentage</h3>
+        <div id='straight-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span5">
+        <h3 class="chart-title">Average Carry Distance</h3>
+        <div id='carry-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+      <div class="span5">
+        <h3 class="chart-title">Dispersion Radius</h3>
+        <div id='dispersion-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span5">
+        <h3 class="chart-title">Average Total Distance</h3>
+        <div id='distance-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+      <div class="span5">
+        <h3 class="chart-title">Average Club Head Speed</h3>
+        <div id='club-speed-chart' style="width: 480px; height: 200px;"></div>
+      </div>
+    </div>
+  </div>
 </div>
